vbnc/vbnc/tests/Errors/32083-1.vb

Class A
    Private Sub New()

    End Sub
End Class

Class B
    Sub M(Of T As New)()
        M(Of A)()
    End Sub
End Class